--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "iron-component-page": "^3.0.0",
     "iron-demo-helpers": "^2.0.0",
     "polymer": "^2.0.0",
-    "vaadin-demo-helpers": "^1.3.0"
+    "vaadin-demo-helpers": "^1.3.0",
+    "vaadin-lumo-styles": "^1.0.0"
   }
 }
