--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "eslint-config-vaadin": "^0.2.7",
     "eslint-plugin-html": "^6.0.0",
     "fs-extra": "^8.1.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
+    "gulp-cli": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "polymer-cli": "^1.9.11",
     "polyserve": "0.27.15",
