--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint:js": "eslint --ext .html,.js src test demo *.js *.html",
     "lint:css": "stylelint demo/**/*.html",
-    "build": "rollup -c && npm-run-all --parallel build:minify.* build:typescript-declarations",
+    "build": "rollup -c",
     "build:minify.module": "uglifyjs dist/vaadin-router.umd.js -c -m --source-map content=dist/vaadin-router.umd.js.map,url=vaadin-router.umd.min.js.map --output dist/vaadin-router.umd.min.js",
     "build:minify.browser": "uglifyjs dist/vaadin-router.js -c -m --mangle-props regex=/^__/ --toplevel --source-map --output dist/vaadin-router.min.js",
     "build:typescript-declarations": "gen-typescript-declarations --outDir . --verify",
