--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "experimentalDecorators": true,
     "outDir": "ts-dist",
     "declaration": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@vaadin/router": ["dist/vaadin-router"]
