--- a/package.json
+++ b/package.json
@@ -66,39 +66,39 @@
     "IE 11"
   ],
   "dependencies": {
-    "@vaadin/vaadin-usage-statistics": "^2.0.8",
+    "@vaadin/vaadin-usage-statistics": "^2.1.0",
     "path-to-regexp": "2.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@babel/core": "^7.7.0",
+    "@babel/preset-env": "^7.7.0",
+    "@polymer/gen-typescript-declarations": "^1.6.0",
     "@types/form-data": "^2.5.0",
-    "bower": "^1.8.8",
-    "browser-sync": "^2.26.7",
-    "browserslist": "^4.6.6",
+    "bower": "^1.8.0",
+    "browser-sync": "^2.26.0",
+    "browserslist": "^4.7.0",
     "bundlesize": "^0.18.0",
-    "eslint": "^6.1.0",
-    "eslint-config-vaadin": "^0.2.7",
+    "eslint": "^6.6.0",
+    "eslint-config-vaadin": "^0.2.0",
     "eslint-plugin-html": "^6.0.0",
     "fs-extra": "^8.1.0",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.2.0",
     "gulp-git": "^2.9.0",
     "gulp-replace": "^1.0.0",
-    "npm-run-all": "^4.1.5",
-    "polymer-cli": "^1.9.11",
-    "polyserve": "0.27.15",
-    "rollup": "^1.19.4",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.0.2",
+    "npm-run-all": "^4.1.0",
+    "polymer-cli": "^1.9.0",
+    "polyserve": "^0.27.0",
+    "rollup": "^1.27.0",
+    "rollup-plugin-babel": "^4.3.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "stylelint": "^10.1.0",
-    "stylelint-config-vaadin": "^0.1.4",
-    "typescript": "^3.5.3",
-    "uglify-es": "^3.3.9",
-    "wct-istanbul": "^0.14.3",
-    "web-component-tester": "6.9.2",
-    "yargs": "^13.3.0"
+    "stylelint": "^11.1.0",
+    "stylelint-config-vaadin": "^0.1.0",
+    "typescript": "^3.7.0",
+    "uglify-es": "^3.3.0",
+    "wct-istanbul": "^0.14.0",
+    "web-component-tester": "^6.9.0",
+    "yargs": "^15.0.0"
   }
 }
