chore: set type to module in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Small and powerful client-side router for Web Components. Framework-agnostic.",
   "main": "dist/vaadin-router.js",
   "module": "dist/vaadin-router.js",
+  "type": "module",
   "repository": "vaadin/vaadin-router",
   "keywords": [
     "Vaadin",
