--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
     "build": "rollup -c && npm-run-all --parallel build:minify.* build:typescript-declarations",
     "build:minify.module": "uglifyjs dist/vaadin-router.umd.js -c -m --source-map content=dist/vaadin-router.umd.js.map,url=vaadin-router.umd.min.js.map --output dist/vaadin-router.umd.min.js",
     "build:minify.browser": "uglifyjs dist/vaadin-router.js -c -m --mangle-props regex=/^__/ --toplevel --source-map --output dist/vaadin-router.min.js",
-    "build:typescript-declarations": "gen-typescript-declarations --outDir . --verify",
+    "build:typescript-declarations": "gen-typescript-declarations --outDir .",
     "build:watch": "rollup -c -w",
     "start": "npm run build && polyserve --port 8000",
-    "start:browser-sync": "browser-sync start --config bs-config.js",
+    "start:browser-sync": "browser-sync start --config bs-config.cjs",
     "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
     "test": "wct && npm run test:coverage && npm run test:typescript-declarations",
     "test:coverage": "wct --profile=coverage",
     "test:typescript-declarations": "tsc --noEmit",
     "size-control": "bundlesize",
-    "docs": "npm run build && npm run docs:analyze && gulp docs",
+    "docs": "npm run build && npm run docs:analyze && gulp -f gulpfile.cjs docs",
     "docs:analyze": "polymer analyze dist/vaadin-router.js src/documentation/*.js > analysis.json",
     "browserslist": "browserslist && browserslist --coverage",
     "prepare": "npm run build",
-    "preversion": "gulp version:update"
+    "version": "gulp -f gulpfile.cjs version:update"
   },
   "bundlesize": [
     {
